--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -39,6 +39,7 @@ provider:
             - Fn::GetAtt: [ AlbumsTable, Arn ]
   environment:
     NODE_OPTIONS: --experimental-fetch
+    secret_id: TweetAlbum
     users_table:
       Ref: UsersTable
     albums_table:
@@ -55,6 +56,8 @@ functions:
           method: get
   auth:
     handler: handler.auth
+    layers:
+      - arn:aws:lambda:ap-northeast-1:133490724326:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:2
     events:
       - httpApi:
           method: POST
