--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -1,9 +1,9 @@
-name: Deploy to GitHub Pages
+name: Deploy web
 
 on:
   push:
     branches:
-      - vue
+      - main
   workflow_dispatch:
 
 permissions:
