--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -62,6 +62,8 @@ functions:
           path: /auth
   createAlbum:
     handler: handler.createAlbum
+    layers:
+      - arn:aws:lambda:ap-northeast-1:133490724326:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:2
     events:
       - httpApi:
           method: POST
@@ -76,11 +78,15 @@ functions:
           path: /{userId}/albums
   updateAlbums:
     handler: handler.updateAlbums
+    layers:
+      - arn:aws:lambda:ap-northeast-1:133490724326:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:2
     events:
       - eventBridge:
           schedule: rate(1 hour)
   showAlbum:
     handler: handler.showAlbum
+    layers:
+      - arn:aws:lambda:ap-northeast-1:133490724326:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:2
     events:
       - httpApi:
           method: GET
@@ -89,6 +95,8 @@ functions:
             name: twitterAuthorizer
   deleteAlbum:
     handler: handler.deleteAlbum
+    layers:
+      - arn:aws:lambda:ap-northeast-1:133490724326:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:2
     events:
       - httpApi:
           method: DELETE
