npm install octokit

--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
-    "@octokit/auth-app": "^4.0.7"
+    "@octokit/auth-app": "^4.0.7",
+    "octokit": "^2.0.10"
   }
 }
