--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -107,6 +107,7 @@ functions:
     handler: handlers/streams.cacheAlbum
     layers:
       - arn:aws:lambda:ap-northeast-1:133490724326:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:2
+    timeout: 60
     events:
       - stream:
           type: dynamodb
