--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -28,5 +28,7 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_ROLE }}
           aws-region: ap-northeast-1
+      - run: npm ci
+        working-directory: api
       - run: serverless deploy --verbose
         working-directory: api
