Refactor list album API

--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -75,7 +75,7 @@ functions:
     events:
       - httpApi:
           method: GET
-          path: /{userId}/albums
+          path: /users/{userId}/albums
   updateAlbums:
     handler: handler.updateAlbums
     layers:
