--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -100,6 +100,8 @@ functions:
           path: /users/{userId}/albums
   updateAlbums:
     handler: handler.updateAlbums
+    layers:
+      - arn:aws:lambda:ap-northeast-1:133490724326:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:2
     events:
       - eventBridge:
           schedule: rate(1 hour)
