--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -86,6 +86,8 @@ functions:
           path: /users/by/{screenName}
   createAlbum:
     handler: handler.createAlbum
+    layers:
+      - arn:aws:lambda:ap-northeast-1:133490724326:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:2
     events:
       - httpApi:
           method: POST
