--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -109,6 +109,8 @@ functions:
           schedule: rate(1 hour)
   showAlbum:
     handler: handler.showAlbum
+    layers:
+      - arn:aws:lambda:ap-northeast-1:133490724326:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:2
     events:
       - httpApi:
           method: GET
