--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -19,6 +19,9 @@ jobs:
     permissions:
       id-token: write
       contents: read
+    defaults:
+      run:
+        working-directory: api
 
     steps:
       - run: cat $GITHUB_EVENT_PATH
@@ -29,9 +32,7 @@ jobs:
           role-to-assume: ${{ secrets.AWS_ROLE }}
           aws-region: ap-northeast-1
       - run: npm ci
-        working-directory: api
         env:
           NODE_ENV: production
       - run: npm ls
       - run: serverless deploy --verbose
-        working-directory: api
