Refresh access token API

--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -69,6 +69,16 @@ functions:
       - httpApi:
           method: POST
           path: /auth
+  refresh:
+    handler: handler.refresh
+    layers:
+      - arn:aws:lambda:ap-northeast-1:133490724326:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:2
+    events:
+      - httpApi:
+          method: POST
+          path: /refresh
+          authorizer:
+            name: twitterAuthorizer
   showMe:
     handler: handler.showMe
     layers:
